Fixing z-index bug on hp video and menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -480,7 +480,8 @@ button {
   text-align: center;
   text-shadow: 1px 1px 2px #000;
   text-transform: uppercase;
-
+  z-index: 8010;
+  
   ul {
     text-shadow: none;
   }
